2003-09-08  David Malcolm <david@davemalcolm.demon.co.uk>
	* plugin-cleanup-source.c

	Now handles span vs structural tags in indentation; fix indentation for comments (bug #116823)
	
	* cong-dispspec.c, cong-enum-mapping.c, cong-enum-mapping.h

	Added output of document model info to the CongDispsepc->XML generator

	* cong-dispspec.c, cong-dispspec.h, global.h, plugin-lists-node-element-listitem.c

	Added support for document models (including DTDs) to dispspecs

	* cong-enum-mapping.c, cong-enum-mapping.h, cong-file-properties.c, cong-menus.c, Makefile.am

	New files: Mapping between strings and enum values; File->Properties dialog split from cong-menus.c

2003-09-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c

	Load xmlns for tag if present

	* plugin-dtd.c

	Added some attribute support to DTD->RELAX NG importer

	* cong-dtd.c, cong-dtd.h

	Added easy traversal routine for DTD attributes

	* plugin-dtd.c

	Preliminary work on DTD->RELAX NG importer

	* cong-dtd.c, cong-dtd.h

	Added easy traversal routine for DTD elements
	
	* cong-file-import.c

	Fix for bux #118769 - a new dialog to select importers if more than one is applicable

2003-09-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, main.c

	My attempt at fix for bug #119755

2003-09-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-docbook.c

	Added custom property dialog for the orderedlist tag
	
	* cong-attribute-editor.c, cong-attribute-editor.h

	Added ability to bind GtkWidgets to XML attributes

	* cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-check-button.h, cong-attribute-wrapper-radio-button.c, cong-attribute-wrapper-radio-button.h, cong-attribute-wrapper.c, cong-attribute-wrapper.h, Makefile.am

	New files

2003-09-03  David Malcolm <david@davemalcolm.demon.co.uk>
	
	* plugin-doc-from-xds.c

	Now sets the xmlDocPtr on the tree clone
	
	* cong-attribute-editor.c

	Should now clean up properly
